-Added unique constraint to TimeInfo for all 3 fields, edited CreateReservation() function to reuse time_id if the record already exists -Added deleteReservation -No duplicate timeinfos, addresses, or locations possible for reservations -Fixed sql queries for display of converted slots to events - need to polish -Reservation tab only visible to staff accounts -converted 3 separate loops to 1 loop through all events so they're in time order on /calendar page -added redirect after slot confirmed, and event deleted -fixed hamburger menu on "slot" page

--- a/frontend/public/stylesheets/calendar.css
+++ b/frontend/public/stylesheets/calendar.css
@@ -202,7 +202,7 @@ button {
         background-color: #c8d8e4;
     }
 
-.event, .slot, .confirmedSlot {
+.event, .slot, .confirmedSlot, .participantEvent {
     font-size: 10px;
     padding: 3px;
     color: white;
@@ -221,6 +221,10 @@ button {
 
 .confirmedSlot {
     background-color: #40ca00ad;
+}
+
+.participantEvent {
+    background-color: blue;
 }
 
 .event-expanded {
