--- a/frontend/public/stylesheets/slots.css
+++ b/frontend/public/stylesheets/slots.css
@@ -233,7 +233,7 @@ button {
 .slotButton {
     background-color: #bb1592;
     color: white;
-    height: 50px;
+    height: 60px;
 }
 
 #cancelButton {
